<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_storage">Storage</string>
    <string name="preference_title_downloads">Storage Folder</string>
    <string name="preference_summary">default location</string>
    <string name="preference_downloads_help">check allowed folder</string>
    <string name="title_about">About</string>
    <string name="preference_title_privacy_policy">Privacy policy</string>
    <string name="preference_title_feedback">Feedback</string>
    <string name="title_miscellaneous">Miscellaneous</string>
    <string name="preference_title_version">Version</string>
    <string name="preference_title_licenses">Licenses</string>
    <string name="privacy_page_url">http://privacy.audiobooks.allsoftdroid.com</string>
    <string name="feedback_summary">Tell us what you liked/dislike about this App.</string>
    <string name="privacy_summary">How your data is been used?</string>
    <string name="licenses_summary">Check Third Part Licenses</string>

    <string name="fragment_feedback_subject">Title</string>
    <string name="feedback_sub_hint">Related to…</string>
    <string name="fragment_feedback_body">Description</string>
    <string name="fragmentDialog_send_btn">SEND</string>
    <string name="fragmentDialog_cancel_btn">CANCEL</string>
    <string name="title_error_message">Title need at least 10 character long</string>
    <string name="body_error_message">Description need at least 15 character long</string>
    <string name="developer_mail">allsoftdroid@gmail.com</string>
    <string name="intent_chooser_send_mail_label">Send Mail…</string>
    <string name="feedback_fragment_tag_label">fragment_feedback</string>
    <string name="close_settings">close settings</string>
    <string name="toolbar_title_text">Settings</string>
</resources>