<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_storage">
        <Preference
            android:key="downloads_preference_key"
            android:title="@string/preference_title_downloads"
            android:icon="@drawable/ic_folder_black_24dp"
            android:summary="@string/preference_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_about">
        <Preference
            android:key="privacy_policy_preference_key"
            android:title="@string/preference_title_privacy_policy"/>

        <Preference
            android:key="feedback_preference_key"
            android:title="@string/preference_title_feedback"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_miscellaneous">
        <Preference
            android:key="version_preference_key"
            android:title="@string/preference_title_version"/>
        <Preference
            android:key="licenses_preference_key"
            android:title="@string/preference_title_licenses"/>
    </PreferenceCategory>
</PreferenceScreen>